shopper-api/k8s/shopper-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: shopper-deployment
    namespace: shopper
    labels:
        app: shopper
        tier: frontend
spec:
    replicas: 3
    selector:
        matchLabels:
            app: shopper
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxSurge: 2
            maxUnavailable: 1
    template:
        metadata:
            labels:
                app: shopper
                tier: frontend
        spec:
            containers:
                - image: gcr.io/alfred-302520/shopper-api:0.2
                  #command: ["sleep 600"]
                  imagePullPolicy: IfNotPresent
                  name: shopper
                  resources: 
                    limits:
                      cpu: 1000
                      memory: 1000Mi
                    requests:
                      cpu: 300m
                      memory: 300Mi          
                  terminationMessagePath: /dev/termination-log
                  terminationMessagePolicy: File
            dnsPolicy: ClusterFirst
            restartPolicy: Always
            schedulerName: default-scheduler
            securityContext: {}
            terminationGracePeriodSeconds: 10
