shopper-api/k8s/shopper-api-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: shopper
    namespace: shopper
    labels:
        app: shopper
        tier: frontend
spec:
    type: NodePort
    ports:
        - port: 8000
    selector:
        app: shopper
        tier: frontend
