shopper-api/k8s/shopper-api-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: shopper-ssl-ingress
    namespace: shopper
    annotations:
        kubernetes.io/ingress.global-static-ip-name: shopper-ssl-ingress-ip
        networking.gke.io/managed-certificates: shopper-ssl-certificate
        nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
        kubernetes.io/ingress.allow-http: "false"
        nginx.ingress.kubernetes.io/proxy-connect-timeout: "240s"
        nginx.ingress.kubernetes.io/proxy-send-timeout: "240s"
        nginx.ingress.kubernetes.io/proxy-read-timeout: "240s"
        ingress.kubernetes.io/proxy-connect-timeout: "240s"
        ingress.kubernetes.io/proxy-send-timeout: "240s"
        ingress.kubernetes.io/proxy-read-timeout: "240s"
spec:
    rules:
        - host: shopperapi.alfreddelivery.com
          http:
              paths:
                  - backend:
                        serviceName: shopper
                        servicePort: 8000
